auto play videos

--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                     </div>
                     <!-- Right side: Video demo -->
                     <div class="project-video">
-                        <video controls>
+                        <video controls autoplay muted>
                             <source src="assets/projects_images/CelebryLook/celebrityLook_demo.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
@@ -748,7 +748,7 @@
                     </div>
                     <!-- Right side: Video demo -->
                     <div class="project-video">
-                        <video controls>
+                        <video controls autoplay muted>
                             <source src="assets/projects_images/koala_reading_ai/koala_reading_ai_gif.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
