change project name

--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
             <!-- Project 3: Funko Pop! Generator -->
             <div class="project-item">
                 <h3>
-                    Funko Pop! Generator
+                    PopYou - fastgan clip
                     <a href="https://github.com/amit154154/PopYou" class="github-button" target="_blank" aria-label="View GitHub Repository">
                         <!-- GitHub SVG Icon -->
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
