add links to experiance

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             <h2 class="section-title">Experience</h2>
 
             <div class="experience-item">
-                <img src="assets/experience/nlpearl_logo.jpeg" alt="NLPearl Logo" class="company-logo">
+                <a href="https://nlpearl.ai/"><img href="https://nlpearl.ai/" src="assets/experience/nlpearl_logo.jpeg" alt="NLPearl Logo" class="company-logo"></a>
                 <div class="experience-details">
                     <h3>NLPearl</h3>
                     <h4>Deep Learning Research Engineer</h4>
@@ -465,7 +465,7 @@
             </div>
 
             <div class="experience-item">
-                <img src="assets/experience/pashoot_robotics_logo.jpeg" alt="Pashoot Robotics Logo" class="company-logo">
+                <a href="https://www.linkedin.com/company/pashoot-robotics/" ><img src="assets/experience/pashoot_robotics_logo.jpeg" alt="Pashoot Robotics Logo" class="company-logo"></a>
                 <div class="experience-details">
                     <h3>Pashoot Robotics</h3>
                     <h4>Computer Vision and Deep Learning Research Engineer</h4>
