--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                 <h3>
                     PopYou2 - VAR Text
                     <!-- GitHub Button -->
-                    <a href="https://github.com/amit154154/PopYou2" class="github-button" target="_blank" aria-label="View GitHub Repository">
+                    <a href="https://github.com/amit154154/VAR_clip" class="github-button" target="_blank" aria-label="View GitHub Repository">
                         <!-- GitHub SVG Icon -->
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                             <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47
