--- a/index.html
+++ b/index.html
@@ -146,6 +146,46 @@
         .github-button:hover {
             background-color: #444c56;
         }
+        .github-button, .spotify-button, .youtube-button {
+        display: inline-flex;
+        align-items: center;
+        padding: 5px 10px;
+        margin-left: 10px;
+        text-decoration: none;
+        border-radius: 4px;
+        font-weight: bold;
+    }
+
+        .github-button svg {
+            fill: #181717; /* GitHub black */
+            width: 20px;
+            height: 20px;
+            margin-right: 5px;
+        }
+
+        .spotify-button {
+            background-color: #1DB954; /* Spotify green */
+            color: white;
+        }
+
+        .spotify-button svg {
+            fill: white;
+            width: 20px;
+            height: 20px;
+            margin-right: 5px;
+        }
+
+        .youtube-button {
+            background-color: #FF0000; /* YouTube red */
+            color: white;
+        }
+
+        .youtube-button svg {
+            fill: white;
+            width: 20px;
+            height: 20px;
+            margin-right: 5px;
+        }
 
         /* Hugging Face Button Styles */
         .huggingface-button {
@@ -734,6 +774,32 @@
                         </svg>
                         GitHub
                     </a>
+                    <a href="https://open.spotify.com/show/0fuZbZipy60VdRpkbIb9y1" class="spotify-button" target="_blank" aria-label="Listen on Spotify">
+                        <!-- Spotify SVG Icon -->
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 168 168">
+                            <path d="M84,0C37.548,0,0,37.548,0,84s37.548,84,84,84s84-37.548,84-84S130.452,0,84,0z M122.429,122.429
+                            c-2.095,3.428-6.561,4.518-9.988,2.429c-27.286-16.639-61.722-20.431-102.318-11.376c-3.854,0.849-7.67-1.634-8.519-5.488
+                            c-0.849-3.854,1.634-7.67,5.488-8.519c43.361-9.618,81.101-5.297,111.408,13.097
+                            C123.142,114.338,124.523,118.903,122.429,122.429z M135.275,96.423c-2.659,4.355-8.33,5.753-12.685,3.094
+                            c-31.23-19.086-78.961-24.672-115.651-13.742c-4.528,1.388-9.35-1.174-10.738-5.702c-1.388-4.528,1.174-9.35,5.702-10.738
+                            c41.44-12.697,94.311-6.496,130.602,15.202
+                            C136.025,87.203,137.933,92.068,135.275,96.423z M142.587,68.698
+                            c-2.66,4.355-8.331,5.753-12.686,3.094c-35.063-21.411-88.59-23.318-123.811-13.611c-4.528,1.388-9.35-1.174-10.738-5.702
+                            c-1.388-4.528,1.174-9.35,5.702-10.738c39.578-12.136,97.026-9.778,136.433,15.473
+                            C143.337,59.478,145.246,64.343,142.587,68.698z"/>
+                        </svg>
+                        Spotify
+                    </a>
+                    <a href="https://www.youtube.com/channel/UCIbCIgJjIWmHyKC0Qc_C6FA" class="youtube-button" target="_blank" aria-label="Watch on YouTube">
+                        <!-- YouTube SVG Icon -->
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M10,15l5.19-3L10,9V15z M23,7c0,0-0.22-1.61-0.9-2.32C21.36,4.11,20.43,4,19.74,4C17.52,3.91,12,3.91,12,3.91h0
+                            c0,0-5.52,0-7.74,0.09C3.57,4,2.64,4.11,2,4.68C1.32,5.39,1.1,7,1.1,7S1,8.7,1,10.4v1.2C1,13.3,1.22,15,1.22,15
+                            c0,0,0.22,1.61,0.9,2.32C2.64,18.89,3.57,19,4.26,19C6.48,19.09,12,19.09,12,19.09h0c0,0,5.52,0,7.74-0.09
+                            c0.69-0.07,1.62-0.18,2.36-0.76c0.68-0.71,0.9-2.32,0.9-2.32S23,13.3,23,11.6v-1.2C23,8.7,23,7,23,7z"/>
+                        </svg>
+                        YouTube
+                    </a>
                 </h3>
                 <div class="project-content">
                     <!-- Left side: Bullet points -->
@@ -743,7 +809,6 @@
                             <li>Utilizes ElevenLabs text-to-speech and ChatPDF APIs for summarization and speech synthesis.</li>
                             <li>Automated downloading of latest papers from Hugging Face daily papers.</li>
                             <li>Implemented free TTS option using Tortoise-TTS; working on summaries using Llama 2.</li>
-                            <li>Available on <a href="https://open.spotify.com/show/0fuZbZipy60VdRpkbIb9y1" target="_blank">Spotify</a> and <a href="https://www.youtube.com/channel/UCIbCIgJjIWmHyKC0Qc_C6FA" target="_blank">YouTube</a>.</li>
                         </ul>
                     </div>
                     <!-- Right side: Video demo -->
