--- a/index.html
+++ b/index.html
@@ -622,9 +622,6 @@
                     <input type="checkbox" id="tag-mobile-app" value="Mobile App" onchange="filterProjects()">
                     <label for="tag-mobile-app">Mobile App</label>
 
-                    <input type="checkbox" id="tag-gan" value="GAN" onchange="filterProjects()">
-                    <label for="tag-gan">GAN</label>
-
                     <!-- Add more tags as needed -->
                 </div>
             </div>
@@ -671,7 +668,7 @@
                 <!-- Tags for this project -->
                 <div class="project-tags">
                     <span class="tag">Image Generation</span>
-                    <span class="tag">GAN</span>
+                    <span class="tag">Computer Vision</span>
                 </div>
                 <div class="project-content">
                     <!-- Left side: Bullet points -->
@@ -688,7 +685,7 @@
                             </li>
                             <li>
                                 Trained an adapter with the frozen
-                                <a href="https://github.com/FoundationVision/VAR" target="_blank">SigLIP image encoder</a> and a lightweight LoRA module to map image embeddings to text representation in a large language model.
+                                <a href="https://arxiv.org/abs/2303.15343" target="_blank">SigLIP image encoder</a> and a lightweight LoRA module to map image embeddings to text representation in a large language model.
                             </li>
                             <li>
                                 Enabled text-to-image generation by replacing the SigLIP image encoder with its text encoder, retaining frozen components such as the VAE and generator for efficiency and quality.
@@ -804,7 +801,7 @@
                 <div class="project-tags">
                     <span class="tag">Image Generation</span>
                     <span class="tag">Mobile App</span>
-                    <span class="tag">GAN</span>
+                    <span class="tag">Computer Vision</span>
                 </div>
                 <div class="project-content">
                     <!-- Left side: Bullet points and images/videos -->
@@ -864,7 +861,7 @@
                 <!-- Tags for this project -->
                 <div class="project-tags">
                     <span class="tag">Image Generation</span>
-                    <span class="tag">GAN</span>
+                    <span class="tag">Computer Vision</span>
                 </div>
                 <div class="project-content">
                     <!-- Left side: Bullet points -->
