--- a/index.html
+++ b/index.html
@@ -885,7 +885,8 @@
                                     2.12.51.56.82 1.27.82 2.15 0 3.07-1.87
                                     3.75-3.65 3.95.29.25.54.73.54 1.48
                                     0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013
-                                    8.013 0 0016 8c0-4.42-3.58-8-8-8z"/>                        </svg>
+                                    8.013 0 0016 8c0-4.42-3.58-8-8-8z"/>
+                        </svg>
                         GitHub
                     </a>
                 </h3>
@@ -904,7 +905,7 @@
                         </ul>
                         <!-- Insert the image here -->
                         <div style="text-align: center; margin-top: 20px;">
-                            <img src="assets/projects_images/few_shot_sam_lora/sam_lora_figure.png" style="width: 300%; max-width: 900px;" alt="SAM LoRA Explained">
+                            <img src="assets/projects_images/few_shot_sam_lora/sam_lora_figure.png" style="width: 300%; max-width: 650px;" alt="SAM LoRA Explained">
                         </div>
                     </div>
                     <div class="project-images">
