change logo to luckylab

--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
         <section id="experience">
             <h2 class="section-title">Experience</h2>
             <div class="experience-item">
-                <img src="assets/experience/freelance_logo.png" alt="Freelance Work Logo" class="company-logo">
+                <img src="assets/experience/luckylab_logo.jpeg" alt="Freelance Work Logo" class="company-logo">
                 <div class="experience-details">
                     <h3>Freelance</h3>
                     <h4>Computer Vision Research Engineer</h4>
