--- a/index.html
+++ b/index.html
@@ -679,6 +679,42 @@
 
     .download-button:hover svg {
       transform: translateX(4px);}
+    /* Profile Section */
+    #profile {
+        margin: 40px 0;
+        padding: 20px 0;
+        background-color: #fff;
+        border: 1px solid #e0e0e0;
+        border-radius: 10px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    .profile-content {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        flex-wrap: wrap;
+    }
+
+    .profile-picture {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        object-fit: cover;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .profile-text {
+        flex: 1;
+        font-size: 16px;
+        color: #555;
+        line-height: 1.6;
+    }
+
+    .profile-text p {
+        margin-bottom: 15px;
+    }
+
 
     </style>
 </head>
@@ -703,6 +739,20 @@
         </div>
 
     </header>
+    <section id="profile">
+    <div class="container">
+        <h2 class="section-title">Profile</h2>
+        <div class="profile-content">
+            <img src="assets/profile_image.jpeg" alt="Amit Israeli" class="profile-picture">
+            <div class="profile-text">
+                <p>
+                    I am Amit Israeli, a dedicated Computer Vision Research Engineer with a passion for creating innovative solutions in deep learning and AI. As a self-learner, I have cultivated a strong foundation in computer vision and artificial intelligence, continuously expanding my knowledge to stay ahead in this rapidly evolving field. My expertise lies in developing and deploying state-of-the-art models for edge devices, addressing challenges in real-time vision applications, segmentation, and optimization.
+                </p>
+            </div>
+        </div>
+    </div>
+    </section>
+
 
     <div class="container">
         <!-- Experience Section -->
