change profile image

--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
     <div class="container">
         <h2 class="section-title">Profile</h2>
         <div class="profile-content">
-            <img src="assets/profile_image.jpeg" alt="Amit Israeli" class="profile-picture">
+            <img src="assets/linkdin_profile_image.jpeg" alt="Amit Israeli" class="profile-picture">
             <div class="profile-text">
                 <p>
                     I am Amit Israeli, a dedicated Computer Vision Research Engineer with a passion for creating innovative solutions in deep learning and AI. As a self-learner, I have cultivated a strong foundation in computer vision and artificial intelligence, continuously expanding my knowledge to stay ahead in this rapidly evolving field. My expertise lies in developing and deploying state-of-the-art models for edge devices, addressing challenges in real-time vision applications, segmentation, and optimization.
