add and change to new CV

--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
 <header>
     <div class="container header-content">
         <h1>Amit Israeli - Research Engineer</h1>
-        <a href="assets/Amit-Israeli-CV.pdf" download class="download-button">
+        <a href="assets/Amit-Israeli-FlowCV-Resume-20250404.pdf" download class="download-button">
             <img src="assets/koala_looking.png" alt="Download Icon">
             Download My CV
         </a>
